CMSParser.js
// This file was generated on Thu Apr 23, 2015 17:18 (UTC-07) by REx v5.33 which is Copyright (c) 1979-2015 by Gunther Rademacher <grd@gmx.net>
// REx command line: CMSParser.ebnf -tree -javascript -a cms

                                                            // line 2 "CMSParser.ebnf"
                                                            var CMSParser = exports.CMSParser = function CMSParser(string, parsingEventHandler)
                                                            {
                                                              init(string, parsingEventHandler);
                                                            // line 9 "CMSParser.js"
  var self = this;

  this.ParseException = function(b, e, s, o, x)
  {
    var
      begin = b,
      end = e,
      state = s,
      offending = o,
      expected = x;

    this.getBegin = function() {return begin;};
    this.getEnd = function() {return end;};
    this.getState = function() {return state;};
    this.getExpected = function() {return expected;};
    this.getOffending = function() {return offending;};

    this.getMessage = function()
    {
      return offending < 0 ? "lexical analysis failed" : "syntax error";
    };
  };

  function init(string, parsingEventHandler)
  {
    eventHandler = parsingEventHandler;
    input = string;
    size = string.length;
    reset(0, 0, 0);
  }

  this.getInput = function()
  {
    return input;
  };

  function reset(l, b, e)
  {
            b0 = b; e0 = b;
    l1 = l; b1 = b; e1 = e;
    end = e;
    eventHandler.reset(input);
  }

  this.getOffendingToken = function(e)
  {
    var o = e.getOffending();
    return o >= 0 ? CMSParser.TOKEN[o] : null;
  };

  this.getExpectedTokenSet = function(e)
  {
    var expected;
    if (e.getExpected() < 0)
    {
      expected = CMSParser.getTokenSet(- e.getState());
    }
    else
    {
      expected = [CMSParser.TOKEN[e.getExpected()]];
    }
    return expected;
  };

  this.getErrorMessage = function(e)
  {
    var tokenSet = this.getExpectedTokenSet(e);
    var found = this.getOffendingToken(e);
    var prefix = input.substring(0, e.getBegin());
    var lines = prefix.split("\n");
    var line = lines.length;
    var column = lines[line - 1].length + 1;
    var size = e.getEnd() - e.getBegin();
    return e.getMessage()
         + (found == null ? "" : ", found " + found)
         + "\nwhile expecting "
         + (tokenSet.length == 1 ? tokenSet[0] : ("[" + tokenSet.join(", ") + "]"))
         + "\n"
         + (size == 0 || found != null ? "" : "after successfully scanning " + size + " characters beginning ")
         + "at line " + line + ", column " + column + ":\n..."
         + input.substring(e.getBegin(), Math.min(input.length, e.getBegin() + 64))
         + "...";
  };

  this.parse_Query = function()
  {
    eventHandler.startNonterminal("Query", e0);
    parse_Path();
    shift(5);                       // EOF
    eventHandler.endNonterminal("Query", e0);
  };

  function parse_Path()
  {
    eventHandler.startNonterminal("Path", e0);
    parse_UnionPath();
    eventHandler.endNonterminal("Path", e0);
  }

  function parse_UnionPath()
  {
    eventHandler.startNonterminal("UnionPath", e0);
    parse_IntersectionPath();
    for (;;)
    {
      if (l1 != 45)                 // '||'
      {
        break;
      }
      shift(45);                    // '||'
      parse_IntersectionPath();
    }
    eventHandler.endNonterminal("UnionPath", e0);
  }

  function parse_IntersectionPath()
  {
    eventHandler.startNonterminal("IntersectionPath", e0);
    parse_PrimaryPath();
    for (;;)
    {
      lookahead1(12);               // EOF | '&&' | ')' | '||'
      if (l1 != 14)                 // '&&'
      {
        break;
      }
      shift(14);                    // '&&'
      parse_PrimaryPath();
    }
    eventHandler.endNonterminal("IntersectionPath", e0);
  }

  function parse_PrimaryPath()
  {
    eventHandler.startNonterminal("PrimaryPath", e0);
    lookahead1(10);                 // NCName | '(' | '<'
    switch (l1)
    {
    case 15:                        // '('
      shift(15);                    // '('
      parse_Path();
      shift(16);                    // ')'
      break;
    default:
      parse_QueryNode();
      for (;;)
      {
        lookahead1(17);             // EOF | '&&' | ')' | '+.' | '.' | '.+' | '||'
        if (l1 != 18                // '+.'
         && l1 != 20                // '.'
         && l1 != 21)               // '.+'
        {
          break;
        }
        switch (l1)
        {
        case 20:                    // '.'
          shift(20);                // '.'
          break;
        case 18:                    // '+.'
          shift(18);                // '+.'
          break;
        default:
          shift(21);                // '.+'
        }
        lookahead1(10);             // NCName | '(' | '<'
        switch (l1)
        {
        case 15:                    // '('
          shift(15);                // '('
          parse_Path();
          shift(16);                // ')'
          break;
        default:
          parse_QueryNode();
        }
      }
    }
    eventHandler.endNonterminal("PrimaryPath", e0);
  }

  function parse_QueryNode()
  {
    eventHandler.startNonterminal("QueryNode", e0);
    if (l1 == 24)                   // '<'
    {
      parse_TypeCast();
    }
    parse_NodeName();
    lookahead1(23);                 // EOF | '&&' | ')' | '+.' | '.' | '.+' | '<' | '[' | '{' | '||'
    if (l1 == 32)                   // '['
    {
      parse_Filter();
    }
    lookahead1(20);                 // EOF | '&&' | ')' | '+.' | '.' | '.+' | '<' | '{' | '||'
    if (l1 == 24)                   // '<'
    {
      parse_Aggregation();
    }
    lookahead1(19);                 // EOF | '&&' | ')' | '+.' | '.' | '.+' | '{' | '||'
    if (l1 == 44)                   // '{'
    {
      parse_Projection();
    }
    eventHandler.endNonterminal("QueryNode", e0);
  }

  function parse_NodeName()
  {
    eventHandler.startNonterminal("NodeName", e0);
    lookahead1(1);                  // NCName
    shift(3);                       // NCName
    lookahead1(25);                 // EOF | '!' | '&&' | ')' | '+.' | '.' | '.+' | '<' | '[' | '{' | '||'
    if (l1 == 6)                    // '!'
    {
      shift(6);                     // '!'
      lookahead1(1);                // NCName
      shift(3);                     // NCName
    }
    eventHandler.endNonterminal("NodeName", e0);
  }

  function parse_TypeCast()
  {
    eventHandler.startNonterminal("TypeCast", e0);
    shift(24);                      // '<'
    parse_TypeName();
    for (;;)
    {
      lookahead1(9);                // ',' | '>'
      if (l1 != 19)                 // ','
      {
        break;
      }
      shift(19);                    // ','
      parse_TypeName();
    }
    shift(29);                      // '>'
    eventHandler.endNonterminal("TypeCast", e0);
  }

  function parse_TypeName()
  {
    eventHandler.startNonterminal("TypeName", e0);
    lookahead1(1);                  // NCName
    shift(3);                       // NCName
    eventHandler.endNonterminal("TypeName", e0);
  }

  function parse_Aggregation()
  {
    eventHandler.startNonterminal("Aggregation", e0);
    parse_Group();
    lookahead1(21);                 // EOF | '&&' | ')' | '+.' | '.' | '.+' | '[' | '{' | '||'
    if (l1 == 32)                   // '['
    {
      parse_Filter();
    }
    eventHandler.endNonterminal("Aggregation", e0);
  }

  function parse_Group()
  {
    eventHandler.startNonterminal("Group", e0);
    shift(24);                      // '<'
    parse_AttributeList();
    shift(29);                      // '>'
    eventHandler.endNonterminal("Group", e0);
  }

  function parse_Filter()
  {
    eventHandler.startNonterminal("Filter", e0);
    shift(32);                      // '['
    parse_Expression();
    shift(33);                      // ']'
    eventHandler.endNonterminal("Filter", e0);
  }

  function parse_Projection()
  {
    eventHandler.startNonterminal("Projection", e0);
    shift(44);                      // '{'
    lookahead1(18);                 // '$avg' | '$count' | '$max' | '$min' | '$sum' | '*' | '@'
    switch (l1)
    {
    case 17:                        // '*'
      shift(17);                    // '*'
      break;
    default:
      parse_AttributeList();
    }
    lookahead1(6);                  // '}'
    shift(46);                      // '}'
    eventHandler.endNonterminal("Projection", e0);
  }

  function parse_AttributeList()
  {
    eventHandler.startNonterminal("AttributeList", e0);
    parse_Attribute();
    for (;;)
    {
      lookahead1(11);               // ',' | '>' | '}'
      if (l1 != 19)                 // ','
      {
        break;
      }
      shift(19);                    // ','
      parse_Attribute();
    }
    eventHandler.endNonterminal("AttributeList", e0);
  }

  function parse_Attribute()
  {
    eventHandler.startNonterminal("Attribute", e0);
    lookahead1(15);                 // '$avg' | '$count' | '$max' | '$min' | '$sum' | '@'
    switch (l1)
    {
    case 31:                        // '@'
      parse_SearchAttr();
      break;
    default:
      parse_AggregateAttr();
    }
    eventHandler.endNonterminal("Attribute", e0);
  }

  function parse_SearchAttr()
  {
    eventHandler.startNonterminal("SearchAttr", e0);
    shift(31);                      // '@'
    parse_AttrName();
    for (;;)
    {
      lookahead1(27);               // '!=' | ')' | ',' | '.' | '<' | '<=' | '=' | '=&' | '=~' | '>' | '>=' | ']' |
                                    // 'and' | 'in' | 'or' | '}'
      if (l1 != 20)                 // '.'
      {
        break;
      }
      shift(20);                    // '.'
      lookahead1(3);                // '$'
      shift(8);                     // '$'
      parse_AttrName();
    }
    eventHandler.endNonterminal("SearchAttr", e0);
  }

  function parse_AggregateAttr()
  {
    eventHandler.startNonterminal("AggregateAttr", e0);
    parse_AggFunc();
    lookahead1(4);                  // '('
    shift(15);                      // '('
    lookahead1(8);                  // ')' | '@'
    if (l1 == 31)                   // '@'
    {
      parse_SearchAttr();
    }
    shift(16);                      // ')'
    eventHandler.endNonterminal("AggregateAttr", e0);
  }

  function parse_AttrName()
  {
    eventHandler.startNonterminal("AttrName", e0);
    lookahead1(1);                  // NCName
    shift(3);                       // NCName
    eventHandler.endNonterminal("AttrName", e0);
  }

  function parse_AggFunc()
  {
    eventHandler.startNonterminal("AggFunc", e0);
    switch (l1)
    {
    case 12:                        // '$min'
      shift(12);                    // '$min'
      break;
    case 11:                        // '$max'
      shift(11);                    // '$max'
      break;
    case 9:                         // '$avg'
      shift(9);                     // '$avg'
      break;
    case 13:                        // '$sum'
      shift(13);                    // '$sum'
      break;
    default:
      shift(10);                    // '$count'
    }
    eventHandler.endNonterminal("AggFunc", e0);
  }

  function parse_Expression()
  {
    eventHandler.startNonterminal("Expression", e0);
    parse_OrExpr();
    eventHandler.endNonterminal("Expression", e0);
  }

  function parse_OrExpr()
  {
    eventHandler.startNonterminal("OrExpr", e0);
    parse_AndExpr();
    for (;;)
    {
      if (l1 != 42)                 // 'or'
      {
        break;
      }
      shift(42);                    // 'or'
      parse_AndExpr();
    }
    eventHandler.endNonterminal("OrExpr", e0);
  }

  function parse_AndExpr()
  {
    eventHandler.startNonterminal("AndExpr", e0);
    parse_NotExpr();
    for (;;)
    {
      lookahead1(13);               // ')' | ']' | 'and' | 'or'
      if (l1 != 34)                 // 'and'
      {
        break;
      }
      shift(34);                    // 'and'
      parse_NotExpr();
    }
    eventHandler.endNonterminal("AndExpr", e0);
  }

  function parse_NotExpr()
  {
    eventHandler.startNonterminal("NotExpr", e0);
    lookahead1(26);                 // '$avg' | '$count' | '$max' | '$min' | '$sum' | '(' | '@' | 'exists' | 'isempty' |
                                    // 'isnull' | 'not'
    if (l1 == 41)                   // 'not'
    {
      shift(41);                    // 'not'
    }
    parse_PrimaryExpr();
    eventHandler.endNonterminal("NotExpr", e0);
  }

  function parse_PrimaryExpr()
  {
    eventHandler.startNonterminal("PrimaryExpr", e0);
    lookahead1(24);                 // '$avg' | '$count' | '$max' | '$min' | '$sum' | '(' | '@' | 'exists' | 'isempty' |
                                    // 'isnull'
    switch (l1)
    {
    case 15:                        // '('
      shift(15);                    // '('
      parse_Expression();
      shift(16);                    // ')'
      break;
    case 36:                        // 'exists'
      parse_ExistExpr();
      break;
    case 40:                        // 'isnull'
      parse_IsnullExpr();
      break;
    case 39:                        // 'isempty'
      parse_IsemptyExpr();
      break;
    default:
      parse_Attribute();
      lookahead1(22);               // '!=' | '<' | '<=' | '=' | '=&' | '=~' | '>' | '>=' | 'in'
      switch (l1)
      {
      case 38:                      // 'in'
        parse_InExpr();
        break;
      case 28:                      // '=~'
        parse_RegexExpr();
        break;
      case 27:                      // '=&'
        parse_SubQueryExpr();
        break;
      default:
        parse_CompExpr();
      }
    }
    eventHandler.endNonterminal("PrimaryExpr", e0);
  }

  function parse_CompExpr()
  {
    eventHandler.startNonterminal("CompExpr", e0);
    switch (l1)
    {
    case 26:                        // '='
      shift(26);                    // '='
      break;
    case 7:                         // '!='
      shift(7);                     // '!='
      break;
    case 29:                        // '>'
      shift(29);                    // '>'
      break;
    case 24:                        // '<'
      shift(24);                    // '<'
      break;
    case 30:                        // '>='
      shift(30);                    // '>='
      break;
    default:
      shift(25);                    // '<='
    }
    parse_Value();
    eventHandler.endNonterminal("CompExpr", e0);
  }

  function parse_InExpr()
  {
    eventHandler.startNonterminal("InExpr", e0);
    shift(38);                      // 'in'
    parse_ValueList();
    eventHandler.endNonterminal("InExpr", e0);
  }

  function parse_RegexExpr()
  {
    eventHandler.startNonterminal("RegexExpr", e0);
    shift(28);                      // '=~'
    parse_ExpValue();
    eventHandler.endNonterminal("RegexExpr", e0);
  }

  function parse_SubQueryExpr()
  {
    eventHandler.startNonterminal("SubQueryExpr", e0);
    shift(27);                      // '=&'
    parse_Query();
    eventHandler.endNonterminal("SubQueryExpr", e0);
  }

  function parse_ExistExpr()
  {
    eventHandler.startNonterminal("ExistExpr", e0);
    shift(36);                      // 'exists'
    parse_Attribute();
    eventHandler.endNonterminal("ExistExpr", e0);
  }

  function parse_IsnullExpr()
  {
    eventHandler.startNonterminal("IsnullExpr", e0);
    shift(40);                      // 'isnull'
    parse_Attribute();
    eventHandler.endNonterminal("IsnullExpr", e0);
  }

  function parse_IsemptyExpr()
  {
    eventHandler.startNonterminal("IsemptyExpr", e0);
    shift(39);                      // 'isempty'
    parse_Attribute();
    eventHandler.endNonterminal("IsemptyExpr", e0);
  }

  function parse_ValueList()
  {
    eventHandler.startNonterminal("ValueList", e0);
    lookahead1(4);                  // '('
    shift(15);                      // '('
    parse_Value();
    for (;;)
    {
      lookahead1(7);                // ')' | ','
      if (l1 != 19)                 // ','
      {
        break;
      }
      shift(19);                    // ','
      parse_Value();
    }
    shift(16);                      // ')'
    eventHandler.endNonterminal("ValueList", e0);
  }

  function parse_Value()
  {
    eventHandler.startNonterminal("Value", e0);
    lookahead1(14);                 // IntegerLiteral | DecimalLiteral | StringLiteral | 'date' | 'false' | 'true'
    switch (l1)
    {
    case 1:                         // IntegerLiteral
      parse_IntVal();
      break;
    case 2:                         // DecimalLiteral
      parse_DoubleVal();
      break;
    case 4:                         // StringLiteral
      parse_StrVal();
      break;
    case 35:                        // 'date'
      parse_DateVal();
      break;
    default:
      parse_BoolVal();
    }
    eventHandler.endNonterminal("Value", e0);
  }

  function parse_IntVal()
  {
    eventHandler.startNonterminal("IntVal", e0);
    shift(1);                       // IntegerLiteral
    eventHandler.endNonterminal("IntVal", e0);
  }

  function parse_DoubleVal()
  {
    eventHandler.startNonterminal("DoubleVal", e0);
    shift(2);                       // DecimalLiteral
    eventHandler.endNonterminal("DoubleVal", e0);
  }

  function parse_ExpValue()
  {
    eventHandler.startNonterminal("ExpValue", e0);
    parse_StrVal();
    lookahead1(16);                 // ')' | '/i' | '/s' | ']' | 'and' | 'or'
    if (l1 == 22                    // '/i'
     || l1 == 23)                   // '/s'
    {
      switch (l1)
      {
      case 22:                      // '/i'
        shift(22);                  // '/i'
        break;
      default:
        shift(23);                  // '/s'
      }
    }
    eventHandler.endNonterminal("ExpValue", e0);
  }

  function parse_StrVal()
  {
    eventHandler.startNonterminal("StrVal", e0);
    lookahead1(2);                  // StringLiteral
    shift(4);                       // StringLiteral
    eventHandler.endNonterminal("StrVal", e0);
  }

  function parse_BoolVal()
  {
    eventHandler.startNonterminal("BoolVal", e0);
    switch (l1)
    {
    case 43:                        // 'true'
      shift(43);                    // 'true'
      break;
    default:
      shift(37);                    // 'false'
    }
    eventHandler.endNonterminal("BoolVal", e0);
  }

  function parse_DateVal()
  {
    eventHandler.startNonterminal("DateVal", e0);
    shift(35);                      // 'date'
    lookahead1(4);                  // '('
    shift(15);                      // '('
    lookahead1(0);                  // IntegerLiteral
    shift(1);                       // IntegerLiteral
    lookahead1(5);                  // ')'
    shift(16);                      // ')'
    eventHandler.endNonterminal("DateVal", e0);
  }

  function shift(t)
  {
    if (l1 == t)
    {
      eventHandler.terminal(CMSParser.TOKEN[l1], b1, e1 > size ? size : e1);
      b0 = b1; e0 = e1; l1 = 0;
    }
    else
    {
      error(b1, e1, 0, l1, t);
    }
  }

  function lookahead1(set)
  {
    if (l1 == 0)
    {
      l1 = match(set);
      b1 = begin;
      e1 = end;
    }
  }

  function error(b, e, s, l, t)
  {
    throw new self.ParseException(b, e, s, l, t);
  }

  var     b0, e0;
  var l1, b1, e1;
  var eventHandler;

  var input;
  var size;
  var begin;
  var end;

  function match(tokenSetId)
  {
    begin = end;
    var current = end;
    var result = CMSParser.INITIAL[tokenSetId];
    var state = 0;

    for (var code = result & 127; code != 0; )
    {
      var charclass;
      var c0 = current < size ? input.charCodeAt(current) : 0;
      ++current;
      if (c0 < 0x80)
      {
        charclass = CMSParser.MAP0[c0];
      }
      else if (c0 < 0xd800)
      {
        var c1 = c0 >> 4;
        charclass = CMSParser.MAP1[(c0 & 15) + CMSParser.MAP1[(c1 & 31) + CMSParser.MAP1[c1 >> 5]]];
      }
      else
      {
        if (c0 < 0xdc00)
        {
          var c1 = current < size ? input.charCodeAt(current) : 0;
          if (c1 >= 0xdc00 && c1 < 0xe000)
          {
            ++current;
            c0 = ((c0 & 0x3ff) << 10) + (c1 & 0x3ff) + 0x10000;
          }
        }
        var lo = 0, hi = 5;
        for (var m = 3; ; m = (hi + lo) >> 1)
        {
          if (CMSParser.MAP2[m] > c0) hi = m - 1;
          else if (CMSParser.MAP2[6 + m] < c0) lo = m + 1;
          else {charclass = CMSParser.MAP2[12 + m]; break;}
          if (lo > hi) {charclass = 0; break;}
        }
      }

      state = code;
      var i0 = (charclass << 7) + code - 1;
      code = CMSParser.TRANSITION[(i0 & 7) + CMSParser.TRANSITION[i0 >> 3]];

      if (code > 127)
      {
        result = code;
        code &= 127;
        end = current;
      }
    }

    result >>= 7;
    if (result == 0)
    {
      end = current - 1;
      var c1 = end < size ? input.charCodeAt(end) : 0;
      if (c1 >= 0xdc00 && c1 < 0xe000) --end;
      return error(begin, end, state, -1, -1);
    }

    return (result & 63) - 1;
  }
}

CMSParser.getTokenSet = function(tokenSetId)
{
  var set = [];
  var s = tokenSetId < 0 ? - tokenSetId : CMSParser.INITIAL[tokenSetId] & 127;
  for (var i = 0; i < 47; i += 32)
  {
    var j = i;
    var i0 = (i >> 5) * 88 + s - 1;
    var f = CMSParser.EXPECTED[(i0 & 3) + CMSParser.EXPECTED[i0 >> 2]];
    for ( ; f != 0; f >>>= 1, ++j)
    {
      if ((f & 1) != 0)
      {
        set.push(CMSParser.TOKEN[j]);
      }
    }
  }
  return set;
};

CMSParser.MAP0 =
[
  /*   0 */ 49, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 2, 3, 1,
  /*  36 */ 4, 1, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 1, 1, 16, 17, 18, 1, 19,
  /*  65 */ 20, 20, 20, 20, 20, 20, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 22,
  /*  92 */ 23, 24, 1, 21, 1, 25, 26, 27, 28, 29, 30, 31, 21, 32, 21, 21, 33, 34, 35, 36, 37, 21, 38, 39, 40, 41, 42,
  /* 119 */ 21, 43, 44, 21, 45, 46, 47, 48, 1
];

CMSParser.MAP1 =
[
  /*   0 */ 108, 124, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 156, 181, 181, 181, 181,
  /*  21 */ 181, 214, 215, 213, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214,
  /*  42 */ 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214,
  /*  63 */ 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214,
  /*  84 */ 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214, 214,
  /* 105 */ 214, 214, 214, 247, 261, 416, 277, 331, 369, 385, 401, 314, 314, 314, 306, 353, 345, 353, 345, 353, 353,
  /* 126 */ 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 432, 432, 432, 432, 432, 432, 432,
  /* 147 */ 338, 353, 353, 353, 353, 353, 353, 353, 353, 292, 314, 314, 315, 313, 314, 314, 353, 353, 353, 353, 353,
  /* 168 */ 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 314, 314, 314, 314, 314, 314, 314, 314,
  /* 189 */ 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314, 314,
  /* 210 */ 314, 314, 314, 352, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353,
  /* 231 */ 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 353, 314, 49, 0, 0, 0, 0, 0, 0, 0, 0,
  /* 256 */ 1, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 1, 1,
  /* 289 */ 16, 17, 18, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 21, 21, 1, 1, 1, 1, 1, 1, 1, 12, 1, 1, 1, 1, 1, 1, 1, 1, 1,
  /* 323 */ 1, 1, 1, 1, 1, 1, 1, 12, 19, 20, 20, 20, 20, 20, 20, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21,
  /* 352 */ 1, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21, 21,
  /* 379 */ 21, 22, 23, 24, 1, 21, 1, 25, 26, 27, 28, 29, 30, 31, 21, 32, 21, 21, 33, 34, 35, 36, 37, 21, 38, 39, 40,
  /* 406 */ 41, 42, 21, 43, 44, 21, 45, 46, 47, 48, 1, 2, 3, 1, 4, 1, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 12, 12, 12, 12,
  /* 436 */ 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12
];

CMSParser.MAP2 =
[
  /*  0 */ 57344, 63744, 64976, 65008, 65536, 983040, 63743, 64975, 65007, 65533, 983039, 1114111, 1, 21, 1, 21, 21, 1
];

CMSParser.INITIAL =
[
  /*  0 */ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28
];

CMSParser.TRANSITION =
[
  /*    0 */ 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 979, 970, 979,
